# other/controllers/Author.js
@@ -15,17 +15,6 @@ module.exports.authorGET = function authorGET (req, res, next) {
     });
 };
 
-module.exports.authorIdDELETE = function authorIdDELETE (req, res, next) {
-  var id = req.swagger.params['id'].value;
-  Author.authorIdDELETE(id)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
 module.exports.authorIdGET = function authorIdGET (req, res, next) {
   var id = req.swagger.params['id'].value;
   Author.authorIdGET(id)
@@ -37,33 +26,10 @@ module.exports.authorIdGET = function authorIdGET (req, res, next) {
     });
 };
 
-module.exports.authorIdPUT = function authorIdPUT (req, res, next) {
-  var id = req.swagger.params['id'].value;
-  var body = req.swagger.params['body'].value;
-  Author.authorIdPUT(id,body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.authorPOST = function authorPOST (req, res, next) {
-  var body = req.swagger.params['body'].value;
-  Author.authorPOST(body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
 module.exports.authorReviewDELETE = function authorReviewDELETE (req, res, next) {
   var id = req.swagger.params['id'].value;
   var reviewID = req.swagger.params['reviewID'].value;
-  var userID = req.swagger.params['userID'].value;
+  var userID = req.user.id;
   Author.authorReviewDELETE(id,reviewID,userID)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -86,7 +52,7 @@ module.exports.authorReviewGET = function authorReviewGET (req, res, next) {
 
 module.exports.authorReviewPOST = function authorReviewPOST (req, res, next) {
   var id = req.swagger.params['id'].value;
-  var userID = req.swagger.params['userID'].value;
+  var userID = req.user.id;
   var body = req.swagger.params['body'].value;
   Author.authorReviewPOST(id,userID,body)
     .then(function (response) {
